Add a discord login message & refactor config to use ConfigFile